--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,10 @@ jobs:
           # https://my-ghes-server.example.com
           # github-server-url: ''
       - name: Create build
-        run: apt-get update && \
-             apt-get install -y software-properties-common &&\
-             add-apt-repository ppa:deadsnakes/ppa && \
-             apt-get install -y git python3.9 nodejs curl python-is-python3 && \
-             npm install -g pnpm && \
-             curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
-             python3.9 get-pip.py
+        run: sudo apt-get update && \
+             sudo apt-get install -y software-properties-common &&\
+             sudo add-apt-repository ppa:deadsnakes/ppa && \
+             sudo apt-get install -y git python3.9 nodejs curl python-is-python3 && \
+             sudo npm install -g pnpm && \
+             sudo curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
+             sudo python3.9 get-pip.py
