--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           # https://my-ghes-server.example.com
           # github-server-url: ''
       - name: Create build
-        run: sudo apt-get update && \
+        run: apt update && apt install sudo && \
              sudo apt-get install -y software-properties-common &&\
              sudo add-apt-repository ppa:deadsnakes/ppa && \
              sudo apt-get install -y git python3.9 nodejs curl python-is-python3 && \
