--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,4 @@ jobs:
           # https://my-ghes-server.example.com
           # github-server-url: ''
       - name: Create build
-        run: sudo apt update && \
-             sudo apt-get install -y software-properties-common &&\
-             add-apt-repository ppa:deadsnakes/ppa 
+        run: sudo apt update && sudo apt-get install -y software-properties-common && sudo add-apt-repository ppa:deadsnakes/ppa 
