--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,11 @@ jobs:
           # https://my-ghes-server.example.com
           # github-server-url: ''
       - name: Create build
-        run: sudo apt update && sudo apt-get install -y software-properties-common && sudo add-apt-repository ppa:deadsnakes/ppa 
+        run: >
+          RUN apt-get update && \
+          apt-get install -y software-properties-common &&\
+          add-apt-repository ppa:deadsnakes/ppa && \
+          apt-get install -y git python3.9 nodejs curl python-is-python3 && \
+          npm install -g pnpm && \
+          curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
+          python3.9 get-pip.py
