--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,8 @@ jobs:
           bash scripts/build_frontend.sh
       - name: Deploy
         run: >
-          git config --global user.name 'sch-28'
-          git config --global user.email 'sch-28@users.noreply.github.com'
+          git config --global user.name 'sch-28' &&
+          git config --global user.email 'sch-28@users.noreply.github.com' &&
           git add gradio && 
           git commit -m "Deployed build" &&
           git push 
